// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelPane matches snapshot 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.first.button:not(.selected){background-color:white;}
    .label.first:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.first:not(.no-hover):hover,.label.first.selected{background-color:red;}
    .label.second.button:not(.selected){background-color:white;}
    .label.second:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.second:not(.no-hover):hover,.label.second.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button label first"
      id="label-first"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button label second"
      id="label-second"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;

exports[`LabelPane not editable 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.first.button:not(.selected){background-color:white;}
    .label.first:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.first:not(.no-hover):hover,.label.first.selected{background-color:red;}
    .label.second.button:not(.selected){background-color:white;}
    .label.second:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.second:not(.no-hover):hover,.label.second.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <span
      className="label first selected"
      id="label-first"
      title="first label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </span>
    <span
      className="label second"
      id="label-second"
      title="second label"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </span>
  </div>
</div>
`;

exports[`LabelPane with selected labels 1`] = `
<div
  className="css-class"
>
  <style
    type="text/css"
  >
    .label.first.button:not(.selected){background-color:white;}
    .label.first:not(.button):not(.selected){border-color:red;color:red;}
    .label.button.first:not(.no-hover):hover,.label.first.selected{background-color:red;}
    .label.second.button:not(.selected){background-color:white;}
    .label.second:not(.button):not(.selected){border-color:green;color:green;}
    .label.button.second:not(.no-hover):hover,.label.second.selected{background-color:green;}
  </style>
  <div
    className="label-selector-list"
  >
    <button
      className="button label first selected"
      id="label-first"
      onClick={[Function]}
      title="first label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      first
    </button>
    <button
      className="button label second"
      id="label-second"
      onClick={[Function]}
      title="second label"
      type="button"
    >
      <span
        className="ion-pricetag"
      >
         
      </span>
      second
    </button>
  </div>
</div>
`;
